tests/ui/write_macros/update_unset_on_required.stderr
error: Failed to parse schema: Schema file 'prax/schema.prax' not found. Searched in:
         - CARGO_MANIFEST_DIR/prax/schema.prax
         - (absolute) prax/schema.prax
         - (current_dir) prax/schema.prax
 --> tests/ui/write_macros/update_unset_on_required.rs:4:1
  |
4 | prax_orm::prax_schema!("prax/schema.prax");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prax_orm::prax_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `unset` is only valid for nullable fields. Field `email` is not nullable.
 --> tests/ui/write_macros/update_unset_on_required.rs:9:26
  |
9 |         data: { email: { unset: true } },
  |                          ^^^^^
